<resources>
    <string name="app_name">BLE Positioning</string>
    <string name="developer">Federico Torsello</string>
    <string name="developer_email">federico.torsello@studio.unibo.it</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--<string name="action_settings">Settings</string>-->
    <string name="action_clear_list">Clear list</string>

    <!-- IBEACON ADAPTER -->

    <string name="friendly_name">Friendly name:</string>
    <string name="default_name">Default name:</string>
    <string name="color">Color:</string>
    <string name="mac_address">MAC address:</string>
    <string name="major">Major:</string>
    <string name="minor">Minor:</string>
    <string name="uuid">UUID:</string>
    <string name="name_space">NameSpace:</string>
    <string name="instance">Instance:</string>
    <string name="rssi">RSSI: dB</string>
    <string name="power">PWR: dB</string>
    <string name="distance_beacon">Dist:</string>
    <string name="proximity">Proximity:</string>

    <!--Color devices-->
    <string name="icy_marshmallow">Icy Marshmallow</string>
    <string name="blueberry_pie">Blueberry Pie</string>
    <string name="mint_cocktail">Mint Cocktail</string>
    <!---->


    <!--<string name="string_scan_subtext">Number of iBeacons discovered: %s</string>-->

    <string name="snackbar_exit">"Press once again to exit!"</string>

    <string name="snackbar_scanning_enabled">Scanning enabled</string>
    <string name="snackbar_scanning_disabled">Scanning disabled</string>
    <string name="snackbar_start_scanning">Push the button to start scanning</string>

    <string name="dialog_bluetooth_title">Bluetooth not enabled</string>
    <string name="dialog_bluetooth_text">Press OK to enable Bluetooth</string>

    <string name="dialog_location_access_title">This app needs location access</string>
    <string name="dialog_location_access_text">Please grant location access so this app can detect beacons</string>

    <string name="dialog_permissions_location_access_title">Functionality limited</string>
    <string name="dialog_permissions_location_access_text">Since location access has not been granted,
        this app will not be able to discover beacons when in the background</string>

    <!-- PreferencesFragment fragment -->
    <string name="settings_kalman_status">Kalman Filter System Noise</string>
    <string name="settings_kalman_value">5.0</string>
    <string name="settings_wd_status">Walk detection?</string>
    <string name="settings_sorting">Select the sorting mode</string>
    <string name="settings_enabled">Enabled</string>
    <string name="settings_disabled">Disabled</string>
    <string name="settings_selfcorrection_status">Self-correcting beacon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_checkbox_preference">check</string>
    <string name="title_first_section">title</string>
    <string name="default_checkbox_preference">check</string>
    <string name="title_edittext_preference">edittext</string>
    <string name="summary_edittext_preference">edittext2</string>
    <string name="dialog_title_edittext_preference">dial1</string>
    <string name="title_second_section">title1</string>
    <string name="title_list_preference">pref</string>
    <string name="dialog_title_list_preference">dial1</string>
    <string name="title_intent_preference">boh</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>


    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>


    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>

    <string name="velocity">Velocity:</string>
    <string name="radioB_default_sorting">Default sort (list device order)</string>
    <string name="radioB_color_sorting">Sort by color</string>
    <string name="radioB_distance_sorting">Sort by distance</string>
    <string name="measurement">Measurement</string>
    <string name="distance_arduino">---</string>


    <string name="default_text_string">No data</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="permission_denied">Permission denied</string>
    <string name="receiving">Receiving</string>
    <string name="opening_device_failed">Opening USB device failed</string>
    <string name="claimning_interface_failed">Claiming interface failed</string>
    <string name="no_in_endpoint_found">No in endpoint found</string>
    <string name="no_out_endpoint_found">No out endpoint found</string>
    <string name="no_extra_in_intent">No %1$s extra in intent</string>
    <string name="device_detaches">Device detached</string>
    <string name="no_device_found">No device found</string>
    <string name="found">found</string>
    <string name="beaconcolorimage">beaconColorImage</string>
    <string name="appimage">appImage</string>

    <string name="app_title">USB Serial Example</string>
    <string name="refreshing">Refreshing...</string>
    <string name="textBtnRTS">RTS - Request To Send</string>
    <string name="textBtnDTR">DTR - Data Terminal Ready</string>
    <string name="distance_estimation_arduino">Arduino distance estimation</string>
    <string name="usb_state">USB state:</string>
    <string name="details">Details</string>
    <string name="device_distance_estimation">Device distance estimation</string>


</resources>
