<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/title_first_section">

        <CheckBoxPreference
            android:defaultValue="@string/default_checkbox_preference"
            android:key="checkbox_preference"
            android:title="@string/title_checkbox_preference" />

        <EditTextPreference
            android:dependency="checkbox_preference"
            android:dialogTitle="@string/dialog_title_editText_preference"
            android:key="editText_preference"
            android:summary="@string/summary_editText_preference"
            android:title="@string/title_editText_preference" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_second_section">

        <ListPreference
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:key="list_preference"
            android:title="@string/title_list_preference" />

        <Preference android:title="@string/title_intent_preference">
            <!--<intent-->
            <!--android:action="android.intent.action.VIEW"-->
            <!--android:data="http://codepath.com/" />-->
        </Preference>


    </PreferenceCategory>

</PreferenceScreen>