<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PreferencesFragment">

    <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.PreferencesFragment">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/settings_kalman_status"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <LinearLayout
                            android:id="@+id/kalmanSeekContainer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/card_margin">

                            <TextView
                                android:id="@+id/kalmanValue"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_horizontal"
                                android:text="@string/settings_kalman_value"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <SeekBar
                                android:id="@+id/kalmanSeek"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:max="100" />

                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/settings_wd_status"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <Switch
                            android:id="@+id/walkDetectionSwitch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/card_margin"
                            android:text="@string/settings_disabled" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/settings_sorting"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/card_margin">

                            <RadioButton
                                android:id="@+id/radioButton_default_sorting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radioB_default_sorting" />

                            <RadioButton
                                android:id="@+id/radioButton_color_sorting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radioB_color_sorting" />

                            <RadioButton
                                android:id="@+id/radioButton_distance_sorting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radioB_distance_sorting" />
                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>