<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/kalmanStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/settings_kalman_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/kalmanStatus"
            android:id="@+id/kalmanSeekContainer">

            <TextView
                android:id="@+id/kalmanValue"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_kalman_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />

            <SeekBar
                android:id="@+id/kalmanSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/selfCorrectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/kalmanSeekContainer"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings_selfcorrection_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/selfCorrectionSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selfCorrectionStatus"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings_enabled" />

        <TextView
            android:id="@+id/walkDetection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/selfCorrectionSwitch"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings_wd_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/walkDetectionSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/walkDetection"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/settings_disabled" />

        <TextView
            android:id="@+id/sortByDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/walkDetectionSwitch"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings_sort_by_distance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/sortByDistanceSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sortByDistance"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/settings_disabled" />

    </RelativeLayout>
</ScrollView>